Made some changes again!

--- a/AspDotNetMVCBootstrapTable/Views/Home/Index.cshtml
+++ b/AspDotNetMVCBootstrapTable/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
 
 @section css {
     <link href="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.css" rel="stylesheet" />
+    <style type="text/css">
+        
+    </style>
 }
 
 <div class="row">
